Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119917

Non-native FileDialog loses current filename when changing folders

    XMLWordPrintable

Details

    • 8e734b2fc (dev), ddee70ac8 (6.7), 000e0ec51 (6.6), a976130b7 (tqtc/lts-6.5)
    • G&UI Finishing 2023

    Description

      Code

      import QtQuick
      import QtQuick.Dialogs
      
      Window {
          width: 640
          height: 480
          visible: true
      
          FileDialog {
              id: dlg
              fileMode: FileDialog.SaveFile
              options: FileDialog.DontUseNativeDialog
              onAccepted: console.log("Selected", selectedFile)
          }
          Component.onCompleted: dlg.open()
      }
      

       

      Steps to reproduce

      1. Run the code above
      2. Type a name into the "File name" field
      3. Double-click on an existing folder

       

      Expected outcomes (Native dialog)
      After Step #3, the "File name" field retains the name that you entered in Step #2.

       

      Actual outcomes (Non-native dialog)
      After Step #3, the "File name" field is cleared.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hurlevent Oliver Eftevaag
            skoh-qt Sze Howe Koh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews