src/quickdialogs/quickdialogsquickimpl/qml/+Fusion/FileDialog.qml
@@ -167,7 +167,6 @@ FileDialogImpl {
         TextField {
             id: fileNameTextField
             objectName: "fileNameTextField"
-            text: control.fileName
             visible: false
 
             Layout.fillWidth: true
