src/quickdialogs/quickdialogsquickimpl/qml/+Material/FileDialog.qml
@@ -139,7 +139,6 @@ FileDialogImpl {
         TextField {
             id: fileNameTextField
             objectName: "fileNameTextField"
-            text: control.fileName
             visible: false
 
             Layout.topMargin: 12
