src/quickdialogs/quickdialogsquickimpl/qml/+Universal/FileDialog.qml
@@ -143,7 +143,6 @@ FileDialogImpl {
         TextField {
             id: fileNameTextField
             objectName: "fileNameTextField"
-            text: control.fileName
             visible: false
 
             Layout.fillWidth: true
